--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
         <script src="assets/js/modernizr.js"></script>
     </head>
     <body>
+        <div></div>
         <div id="wrapper">
             <header class="header sticky-header">
                 <div class="container">
