--- a/cart.html
+++ b/cart.html
@@ -27,7 +27,7 @@
                 <div class="container">
                     <a href="index.html" class="site-logo" title="Kryptual | Now Funding is Easy">
                         <img src="assets/images/kryptual_logo.png" alt="Logo" style="width: 175px;">
-                        <span class="sr-only">Kryptual | Now Funding is Easy</span>
+                        <span class="sr-only">Kryptewual | Now Funding is Easy</span>
                     </a>
 
                     <!-- <div class="header-dropdowns">
